--- a/index.qmd
+++ b/index.qmd
@@ -1,4 +1,17 @@
 ---
 title: "Kyle Wodehouse"
+about:
+    template: trestles
+    links:
+        - icon: linkedin
+          text: LinkedIn
+          url: https://www.linkedin.com/in/kylewodehouse/
+        - icon: github
+          text: Github
+          url: https://github.com/kylecapybara
+        - icon: instagram
+          text: Instagram
+          url: https://www.instagram.com/kylethedonut/
+image: R0001528.png
+comments: false
 ---
-
